--- a/requirements.txt
+++ b/requirements.txt
@@ -22,6 +22,7 @@ importlib-metadata==5.0.0
 keras==2.10.0
 Keras-Preprocessing==1.1.2
 kiwisolver==1.4.4
+libgl1
 libclang==14.0.6
 Markdown==3.4.1
 MarkupSafe==2.1.1
